adding some changes

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h3 {
 
 .card-text h1 {
   font-size: 2rem;
-  color: var(--text-grayish-dark-blue-extreme);
+  color: var(--text-dark-blue);
 }
 
 .card-box {
